# HealthCare-Pulmonary-diagnosis

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: main.yaml
Research/: Trials.ipynb  model_selection.ipynb
deployment_artifacts/: class_names.json
src/CNN_Classifier/: __init__.py
src/CNN_Classifier/components/: base_model_preparation.py  data_ingestion.py  data_transformation.py  model_evaluation.py  model_training.py
src/CNN_Classifier/config/: configuration.py
src/CNN_Classifier/entity/: config_entity.py
src/CNN_Classifier/pipeline/: base_model_preparation_pipeline.py  data_ingestion_pipeline.py  data_transformation_pipeline.py  model_evaluation_pipeline.py  model_training_pipeline.py  prediction.py
src/CNN_Classifier/utils/: common.py
templates/: index.html
tests/: test_imports.py
